[package]
name = "readme-code-extractor-lib"
version = "0.1.0"

edition = "2018"
# @TODFO 1.85.0 if we use https://crates.io/crates/toml/1.1.2+spec-1.1.0
rust-version = "1.81.0"

license = "BSD-2-Clause OR Apache-2.0 OR MIT"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Extract code blocks from your README.md (or another Markdown file)."

categories = ["development-tools", "development-tools::testing", "rust-patterns"]

keywords = ["extract", "readme", "macro", "macros"]

repository = "https://github.com/prudent-rs/readme-code-extractor-lib"
homepage = "https://github.com/prudent-rs/readme-code-extractor"

[dependencies]
serde = { version = "1.0.113", features = ["derive"] }
# toml version 1.1.2 requires Rust 1.85.0+
toml = { version = "1.0.0", default-features = false, features = ["parse", "serde"] }
