[package]
name = "readme-code-extractor-lib"
version = "0.0.1"

edition = "2024"
# Requiring Rust 1.88 for https://doc.rust-lang.org/proc_macro/struct.Span.html#method.local_file.
rust-version = "1.88.0"

license = "BSD-2-Clause OR Apache-2.0 OR MIT"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Extract code blocks from your README.md (or another Markdown file)."

categories = ["development-tools", "development-tools::testing", "rust-patterns"]

keywords = ["extract", "readme", "macro", "macros"]

repository = "https://github.com/prudent-rs/readme-code-extractor-lib"
homepage = "https://github.com/prudent-rs/readme-code-extractor"

[dependencies]
proc-macro2 = {version="1.0.60", features=["span-locations"] }
serde = { version = "1.0.113", features = ["derive"] }
toml = { version = "1.0.0", default-features = false, features = ["parse", "serde"] }
